[WIP] rendering fields from store

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <div id="awesome-app"></div>
+  <div id="app"></div>
   <script src="/dist/assets/javascripts/bundle.js"></script>
 </body>
 </html>
