--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <div id="app" class="c-flex-container"></div>
+  <div id="app"></div>
   <script src="/dist/assets/javascripts/bundle.js"></script>
 </body>
 </html>
