--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>This is a title</title>
+  <title>React + Flux + Puzzle</title>
   <link rel="stylesheet" href="/dist/assets/css/main.css" />
 </head>
 <body>
-
   <div id="app"></div>
-  <script src="/dist/assets/javascripts/bundle.js"></script>
+  <script src="/dist/assets/js/index.js"></script>
 </body>
 </html>
 
