--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>React + Flux + Puzzle</title>
-  <link rel="stylesheet" href="/dist/assets/css/main.css" />
+  <link rel="stylesheet" href="http://weslleyaraujo.github.io/react-flux-puzzle/assets/css/main.css" />
 </head>
 <body>
 	<svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -29,7 +29,7 @@
     </li>
   </ul>
   <div id="app"></div>
-  <script src="/dist/assets/js/index.js"></script>
+  <script src="http://weslleyaraujo.github.io/react-flux-puzzle/assets/js/index.js"></script>
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
